--- a/virtual-whiteboard/public/index.html
+++ b/virtual-whiteboard/public/index.html
@@ -29,6 +29,6 @@
   <body>
     
     <div id="root"></div>
-    <script src="..\src\index.js"></script>
+    <script src="%PUBLIC_URL%/static/js/bundle.js"></script>
   </body>
 </html>
