--- a/virtual-whiteboard/public/editor.html
+++ b/virtual-whiteboard/public/editor.html
@@ -27,26 +27,8 @@
     <title>React App</title>
   </head>
   <body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-</head>
-<body>
-    <h1>Welcome to the Home Page</h1>
-    <button onclick="openWhiteboard()">Open Whiteboard</button>
-
-    <script>
-        function openWhiteboard() {
-            // Replace 'index.html' with the path to your whiteboard index.html file
-            window.location.href = './editor.html';
-        }
-    </script>
-</body>
-
-
-   <!-- <script src="%PUBLIC_URL%/static/js/bundle.js"></script> -->
-  
+    
+    <div id="root"></div>
+    <script src="%PUBLIC_URL%/static/js/bundle.js"></script>
+  </body>
 </html>
