--- a/virtual-whiteboard/public/index.html
+++ b/virtual-whiteboard/public/index.html
@@ -35,7 +35,7 @@
     <title>Home Page</title>
 </head>
 <body>
-    <h1>Welcome to the Home Page</h1>
+    <h1 id="headerone">Welcome to the Home Page</h1>
     <button onclick="openWhiteboard()">Open Whiteboard</button>
 
     <script>
